I try style in option tag but I don't

--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,16 @@
 @tailwind utilities;
 
 @layer base {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
     html {
         font-family: plus;
     }
     body {
         background-color: #F6F7F9;
     }
+    
 }
