--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,10 @@
     body {
         background-color: #F6F7F9;
     }
+    footer .elementFooter span{
+        color:rgba(19, 19, 19, 0.6);
+        font-size: 16px;
+        font-weight: 500;
+    }
     
 }
